Tue Aug  5 15:52:51 2014  SHIBATA Hiroshi  <shibata.hiroshi@gmail.com>

	* gems/bundled_gems: Upgrade to test-unit-3.0.0 and minitest-5.4.0.

Mon Aug  4 21:50:09 2014  Masaki Suketa <masaki.suketa@nifty.ne.jp>

	* test/win32ole/test_win32ole_record.rb: add for WIN32OLE_RECORD
	  test(need .NET Framework 3.5 to run test).

Mon Aug  4 19:49:34 2014  Masaki Suketa <masaki.suketa@nifty.ne.jp>

	* ext/win32ole/win32ole.c (ole_invoke): call rb_hash_foreach instead
	  of rb_block_call.

	* ext/win32ole/win32ole.c: add comment for rdoc of WIN32OLE_VARIANT
	  class.

Mon Aug  4 09:12:47 2014  Eric Wong  <e@80x24.org>

	* variable.c: cleanup to use rb_const_lookup
	  [Feature #10107]

	* vm_insnhelper.c: ditto

Sun Aug  3 10:55:07 2014  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* include/ruby/encoding.h (rb_check_symbol_cstr): ditto.

Sun Aug  3 10:43:08 2014  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* vm_insnhelper.c (vm_call_method): unusable super class should cause
	  method missing when BasicObject is refined but not been using.
	  [ruby-core:64166] [Bug #10106]

Sat Aug  2 23:47:45 2014  Masaki Suketa <masaki.suketa@nifty.ne.jp>

	* ext/win32ole/win32ole.c: separate WIN32OLE::VARIANT src file
	  from win32ole.c
	* ext/win32ole/win32ole.h: ditto.
	* ext/win32ole/win32ole_variant_m.c: ditto.
	* ext/win32ole/win32ole_variant_m.h: ditto.
	* ext/win32ole/depend: ditto.
	* ext/.document: ditto.

Sat Aug  2 14:34:58 2014  Masaki Suketa <masaki.suketa@nifty.ne.jp>

	* ext/win32ole/win32ole.c: add comments for rdoc.

Sat Aug  2 10:26:57 2014  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* object.c (rb_obj_itself): new method Object#itself.  based on the
	  patch by Rafael Franca in [ruby-core:64156].
	  [EXPERIMENTAL] this method may be renamed due to compatibilities.
	  [ruby-core:44704] [Feature #6373]

Fri Aug  1 22:30:40 2014  Masaki Suketa <masaki.suketa@nifty.ne.jp>

	* ext/win32ole/win32ole.c (folerecord_initialize): accept